[tool.poetry]
name = "clustergen"
version = "0.1.0"
description = "Terminal application to generate clustering images."
authors = ["Juan Lara <julara@unal.edu.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
